browser/themes/shared/tabs.inc.css
/* ... */
#
tabbrowser
-
tabs
[
positionpinnedtabs
]
>
.
tabbrowser
-
tab
[
pinned
]
:
:
after
{
height
:
100
%
;
position
:
absolute
;
top
:
0
;
right
:
0
;
}
#
tabbrowser
-
tabs
[
positionpinnedtabs
]
>
.
tabbrowser
-
tab
[
pinned
]
:
-
moz
-
locale
-
dir
(
rtl
)
:
:
after
{
right
:
unset
;
left
:
0
;
}
.
tabbrowser
-
tab
:
-
moz
-
any
(
[
image
]
[
pinned
]
)
>
.
tab
-
stack
>
.
tab
-
content
[
attention
]
:
not
(
[
selected
=
"
true
"
]
)
.
tabbrowser
-
tab
>
.
tab
-
stack
>
.
tab
-
content
[
pinned
]
[
titlechanged
]
:
not
(
[
selected
=
"
true
"
]
)
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
indicator
-
tab
-
attention
.
svg
)
;
background
-
position
:
center
bottom
calc
(
-
4px
+
var
(
-
-
tab
-
toolbar
-
navbar
-
overlap
)
)
;
background
-
repeat
:
no
-
repeat
;
}
.
tabbrowser
-
tab
[
image
]
>
.
tab
-
stack
>
.
tab
-
content
[
attention
]
:
not
(
[
pinned
]
)
:
not
(
[
selected
=
"
true
"
]
)
{
background
-
position
-
x
:
left
11px
;
}
.
tabbrowser
-
tab
[
image
]
>
.
tab
-
stack
>
.
tab
-
content
[
attention
]
:
not
(
[
pinned
]
)
:
not
(
[
selected
=
"
true
"
]
)
:
-
moz
-
locale
-
dir
(
rtl
)
{
background
-
position
-
x
:
right
11px
;
}
.
tab
-
label
[
attention
]
:
not
(
[
selected
=
"
true
"
]
)
{
font
-
weight
:
bold
;
}
.
titlebar
-
placeholder
[
type
=
"
pre
-
tabs
"
]
.
titlebar
-
placeholder
[
type
=
"
post
-
tabs
"
]
{
width
:
40px
;
}
.
titlebar
-
placeholder
[
type
=
"
pre
-
tabs
"
]
{
border
-
inline
-
end
:
1px
solid
;
opacity
:
0
.
2
;
}
.
tabbrowser
-
tab
:
:
after
.
tabbrowser
-
tab
:
:
before
{
border
-
left
:
1px
solid
;
border
-
image
:
linear
-
gradient
(
transparent
6px
currentColor
6px
currentColor
calc
(
100
%
-
5px
)
transparent
calc
(
100
%
-
5px
)
)
;
border
-
image
-
slice
:
1
;
opacity
:
0
.
3
;
}
%
ifdef
CAN_DRAW_IN_TITLEBAR
%
ifdef
MENUBAR_CAN_AUTOHIDE
:
root
[
tabsintitlebar
]
:
not
(
[
extradragspace
]
)
#
toolbar
-
menubar
[
autohide
=
true
]
~
#
TabsToolbar
>
#
tabbrowser
-
tabs
>
.
tabbrowser
-
tab
:
:
after
%
else
:
root
[
tabsintitlebar
]
:
not
(
[
extradragspace
]
)
.
tabbrowser
-
tab
:
:
after
%
endif
%
endif
.
tabbrowser
-
tab
:
hover
:
:
after
#
tabbrowser
-
tabs
:
not
(
[
movingtab
]
)
>
.
tabbrowser
-
tab
[
beforehovered
]
:
:
after
{
border
-
image
:
linear
-
gradient
(
transparent
calc
(
1px
+
var
(
-
-
tabs
-
top
-
border
-
width
)
)
currentColor
calc
(
1px
+
var
(
-
-
tabs
-
top
-
border
-
width
)
)
currentColor
calc
(
100
%
-
1px
)
transparent
calc
(
100
%
-
1px
)
)
;
border
-
image
-
slice
:
1
;
}
#
tabbrowser
-
tabs
:
not
(
[
movingtab
]
)
>
.
tabbrowser
-
tab
[
beforeselected
-
visible
]
:
:
after
#
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
visuallyselected
]
:
:
before
.
tabbrowser
-
tab
[
visuallyselected
]
:
:
after
{
border
-
color
:
var
(
-
-
tabs
-
border
)
;
border
-
image
:
linear
-
gradient
(
transparent
1px
var
(
-
-
tabs
-
border
)
1px
var
(
-
-
tabs
-
border
)
calc
(
100
%
-
1px
-
var
(
-
-
tab
-
toolbar
-
navbar
-
overlap
)
)
transparent
calc
(
100
%
-
1px
-
var
(
-
-
tab
-
toolbar
-
navbar
-
overlap
)
)
)
1
!
important
;
opacity
:
1
;
}
.
tabbrowser
-
tab
:
:
after
#
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
visuallyselected
]
:
:
before
{
content
:
"
"
;
display
:
-
moz
-
box
;
}
.
tabbrowser
-
arrowscrollbox
>
.
scrollbutton
-
up
.
tabbrowser
-
arrowscrollbox
>
.
scrollbutton
-
down
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
arrow
-
left
.
svg
)
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
fill
:
currentColor
;
fill
-
opacity
:
var
(
-
-
toolbarbutton
-
icon
-
fill
-
opacity
)
;
color
:
inherit
;
}
.
tabbrowser
-
arrowscrollbox
>
.
scrollbutton
-
up
:
-
moz
-
locale
-
dir
(
rtl
)
.
tabbrowser
-
arrowscrollbox
>
.
scrollbutton
-
down
:
-
moz
-
locale
-
dir
(
ltr
)
{
transform
:
scaleX
(
-
1
)
;
}
.
tabs
-
newtab
-
button
#
TabsToolbar
>
#
new
-
tab
-
button
#
TabsToolbar
>
toolbarpaletteitem
>
#
new
-
tab
-
button
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
newtab
.
svg
)
;
}
#
alltabs
-
button
{
list
-
style
-
image
:
url
(
chrome
:
/
/
global
/
skin
/
icons
/
arrow
-
dropdown
-
16
.
svg
)
;
}
.
alltabs
-
item
>
.
menu
-
iconic
-
left
>
.
menu
-
iconic
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
places
/
defaultFavicon
.
svg
"
)
;
}
.
alltabs
-
item
[
busy
]
>
.
menu
-
iconic
-
left
>
.
menu
-
iconic
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
loading
.
png
"
)
;
}
media
(
min
-
resolution
:
1
.
1dppx
)
{
.
alltabs
-
item
[
busy
]
>
.
menu
-
iconic
-
left
>
.
menu
-
iconic
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
loading
2x
.
png
"
)
;
}
}
.
alltabs
-
item
[
tabIsVisible
]
{
box
-
shadow
:
inset
-
5px
0
ThreeDShadow
;
}
.
alltabs
-
endimage
[
soundplaying
]
.
alltabs
-
endimage
[
muted
]
.
alltabs
-
endimage
[
activemedia
-
blocked
]
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
audio
-
playing
.
svg
)
;
-
moz
-
context
-
properties
:
fill
;
fill
:
currentColor
;
}
.
alltabs
-
endimage
[
muted
]
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
audio
-
muted
.
svg
)
;
}
.
alltabs
-
endimage
[
activemedia
-
blocked
]
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
audio
-
blocked
.
svg
)
;
}
.
restore
-
tabs
-
button
-
wrapper
{
visibility
:
hidden
;
position
:
fixed
;
}
.
restore
-
tabs
-
button
-
wrapper
[
shown
]
{
visibility
:
visible
;
position
:
initial
;
}
.
restore
-
tabs
-
button
{
box
-
sizing
:
border
-
box
;
-
moz
-
appearance
:
none
;
background
-
color
:
hsl
(
0
0
%
0
%
.
04
)
;
border
:
1px
solid
hsla
(
0
0
%
16
%
.
2
)
;
border
-
radius
:
3px
;
margin
:
3px
;
margin
-
inline
-
start
:
9px
;
transition
:
max
-
width
100ms
;
padding
:
0
5px
;
}
.
restore
-
tabs
-
button
:
hover
{
background
-
color
:
hsl
(
0
0
%
0
%
.
08
)
;
}
/* ... */

